js/js.translator/testData/incremental/invalidation/typeScriptExports/main/m.4.d.ts
declare namespace kotlin_main {
    type Nullable<T> = T | null | undefined
    class MyClass {
        constructor(stepId: number);
        get stepId(): number;
        qux(): number;
    }
    function box(stepId: number): string;
}
